# sidcord

./: .env.example  .gitignore  BACKEND_AUDIT.md  DISCORD_GAP_ANALIZ.md  PROGRESS.md  README.md  SETUP_STATUS.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  desktop.yml
apps/api/: Dockerfile  Makefile  README.md  go.mod  go.sum
apps/api/migrations/: 0001_init.down.sql  0001_init.up.sql  0002_invites.up.sql  0003_roles_permissions.down.sql  0003_roles_permissions.up.sql  0004_channel_overrides.down.sql  0004_channel_overrides.up.sql  0005_moderation.down.sql  0005_moderation.up.sql  0006_dms.down.sql  0006_dms.up.sql  0007_reactions.down.sql  0007_reactions.up.sql  0008_mentions.down.sql  0008_mentions.up.sql  0009_search.down.sql  0009_search.up.sql  0010_pins.down.sql  0010_pins.up.sql  0011_p0_backbone.down.sql  0011_p0_backbone.up.sql  0012_threads_emojis_webhooks.down.sql  0012_threads_emojis_webhooks.up.sql  0013_p1_tables.down.sql  0013_p1_tables.up.sql  0014_automod.down.sql  0014_automod.up.sql  0016_stickers_push.down.sql  (+72 more)
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/gateway/: README.md  mix.exs
apps/mobile/: App.tsx  README.md  package.json
apps/voice/: package.json  tsconfig.json
apps/web/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
docs/: BOT_API.md  architecture.md
infra/docker/: docker-compose.yml
(+182 files in other folders)
