[package]
name = "sidcord-desktop"
version = "0.1.0"
description = "Sidcord masaüstü uygulaması"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
sysinfo = "0.33"

[profile.release]
strip = true
lto = true
codegen-units = 1
